--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,17 +14,14 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release: false
-      
       - uses: mymindstorm/setup-emsdk@v14
-      
       - uses: actions/checkout@v4
-      
+      - name: Set Script Permissions
+        run: chmod +x build_desktop.sh build_web.sh
       - name: Build desktop
         run: ./build_desktop.sh
-
       - name: Build web
         run: ./build_web.sh
-
       - name: Upload web build artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -41,14 +38,12 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release: false
-      
       - uses: mymindstorm/setup-emsdk@v14
-
       - uses: actions/checkout@v4
-
+      - name: Set Script Permissions
+        run: chmod +x build_desktop.sh build_web.sh
       - name: Build desktop
         run: ./build_desktop.sh
-
       - name: Build web
         run: ./build_web.sh
 
@@ -60,15 +55,11 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release: false
-
       - uses: mymindstorm/setup-emsdk@v14
-
       - uses: actions/checkout@v4
       - uses: ilammy/msvc-dev-cmd@v1
-
       - name: Build desktop
         run: .\build_desktop.bat
-
       - name: Build web
         run: .\build_web.bat
 
