build.bat pipeline fix

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,10 @@
             "request": "launch",
             "preLaunchTask": "Debug Build",
             "name": "Debug",
-            "program": "${workspaceFolder}/build/debug/game_debug.exe",
+            "program": "",
+            "windows": { "program": "build/debug/game_debug.exe" },
+            "linux":   { "program": "build/debug/game_debug" },
+            "osx":     { "program": "build/debug/game_debug" },
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
