build.bat pipeline fix

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
             "preLaunchTask": "Debug Build",
             "name": "Debug",
             "program": "",
-            "windows": { "program": "build/debug/game_debug.exe" },
-            "linux":   { "program": "build/debug/game_debug" },
-            "osx":     { "program": "build/debug/game_debug" },
+            "windows": { "program": "build/debug/game_windows_debug.exe" },
+            "linux":   { "program": "build/debug/game_linux_debug" },
+            "osx":     { "program": "build/debug/game_macos_debug" },
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
